k8s/autosource/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autosource-vue-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autosource-vue
  template:
    metadata:
      labels:
        app: autosource-vue
    spec:
      containers:
      - name: myapp
        image: leetrue801/autosource-vue:29
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        ports:
        - containerPort: 80
