k8s/autosource/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autosource-mariadb-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autosource-mariadb-app
  template:
    metadata:
      labels:
        app: autosource-mariadb-app
    spec:
      containers:
      - name: mariadb
        image: mariadb:latest
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mariadb-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb-volume
        persistentVolumeClaim:
          claimName: autosource-mariadb-pvc
