k8s/autosource/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autosource-api-service
spec:
  type: ClusterIP
  selector:
    app: autosource-api
  ports:
  - name: autosource-api-port
    port: 8087
    targetPort: 8087
