k8s/autosource/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autosource-vue-service
spec:
  type: ClusterIP
  selector:
    app: autosource-vue
  ports:
  - port: 80
    targetPort: 80
