k8s/autosource/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autosource-mariadb-service
spec:
  type: NodePort
  selector:
    app: autosource-mariadb-app
  ports:
  - name: mariadb-port
    port: 3306
    targetPort: 3306
    nodePort: 30029
